Bug 202638 make nsSocketTransport notify its observers when the sockettransportservice initiated a detach (f.ex. because it's going offline) r=darin sr=bz